feat(ratelimit): implement core rate limiter (T001-T007)
- Initialize Go module with actress-classifier path
- Create project structure: internal/ratelimit, tests/integration, docs
- Install dependencies: golang.org/x/time, golang.org/x/sync, zap, testify
- Implement LimitConfig with validation and JSON loading
- Implement LimitStats with atomic operations and thread-safe stats
- Implement DomainLimiter with token bucket algorithm
- Implement RateLimiter main interface with lazy loading and concurrent safety
- Add comprehensive unit tests with 85.5% coverage
- Add race detector verification
- Update .gitignore for Go project

Tasks completed: T001-T007 (7/28)
Phase 1: Setup ✓ Complete
Phase 3: US1 - Basic rate limiting ⏳ In progress (60% complete)

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,21 @@ yarn-error.log*
 
 # 文件建構
 _build/
+
+# Go 相關
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+vendor/
+go.work
+go.work.sum
+coverage.out
+coverage.html
+
+# Go build cache
+.cache/
+.go/
