feat(phase1): setup project infrastructure for SQLite-to-JSON migration
- T001: Install filelock 3.13.0+ for concurrent file locking
- T002: Create JSON database directory structure (data/json_db, data/json_db/backup)
- T003: Define data structures and types (src/models/json_types.py)

Defines:
- 10 TypedDict structures (Video, Actress, Link, Statistics, etc.)
- 6 custom exception classes for error handling
- 20+ constants for database configuration
- Helper functions for initializing empty structures

All prerequisites for Foundational phase completed.

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,9 @@ isort>=5.12.0
 # 環境設定
 python-dotenv>=1.0.0
 
+# 檔案鎖定和並行控制
+filelock>=3.13.0       # 檔案級鎖定，用於並行存取控制
+
 # 如果需要資料庫，請取消註解以下套件
 # sqlalchemy>=2.0.0
 # psycopg2-binary>=2.9.0
