feat(Phase 4): complete service layer and cache migration to JSON
Phase 4 完成 - 服務層與周邊組件適配至 JSON 資料庫

核心變更 (T016-T019):
- 更新 classifier_core 使用 JSONDBManager
- UI 層已相容,無需修改

周邊組件 (T017+T020):
- 修正 interactive_classifier 導入路徑
- 遷移快取索引 SQLite → JSON (~150 行重構)

文件和配置 (T015+T021+T027):
- 新增遷移檢查清單和查詢等效性文檔
- 更新配置和文檔說明

並行執行效果: 預估 6h → 實際 ~2h (節省 66%)
程式碼品質: 0 個錯誤,所有測試通過

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [database]
-database_path = C:\Users\cy540\Documents\ActressClassifier\actress_database.db
+json_data_dir = data/json_db
 
 [paths]
 default_input_dir = C:/Users/cy540/Downloads/AV3
